# aspartial

./: Cargo.toml  README.md
aspartial/: Cargo.toml  README.md  build.rs
aspartial/src/: lib.rs
aspartial/tests/: test_derive.rs  test_derive_enum.rs  test_derive_flattened_struct.rs  test_derive_generic_enum.rs  test_derive_struct.rs  test_derive_tagged_enum.rs  test_derive_untagged_enum.rs  test_generic_struct.rs  test_newtype_derive.rs
aspartial_derive/: Cargo.toml
aspartial_derive/src/: as_partial.rs  derive_config.rs  lib.rs  serde_attributes.rs
aspartial_derive/src/syn_extensions/: mod.rs
