[package]
name = "aspartial"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[features]
serde = ["dep:serde"]
serde_json = ["serde", "dep:serde_json", "aspartial_derive/serde_json"]

[dependencies]
aspartial_derive = { path = "../aspartial_derive" }
serde = { workspace = true, optional = true, features = ["derive"] }
serde_json = { workspace = true, optional=true }

[dev-dependencies]
serde_json.workspace = true
serde = { workspace = true, features = ["derive"] }

