[package]
name = "aspartial"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[features]
serde = ["dep:serde", "dep:serde_json", "aspartial_derive/serde"]
iso8601 = ["dep:iso8601-timestamp"]

[dependencies]
aspartial_derive = { path = "../aspartial_derive" }
serde = { workspace = true, optional = true, features = ["derive"] }
serde_json = { workspace = true, optional=true }
iso8601-timestamp = { version = "0.2.17", optional = true }

[dev-dependencies]
serde_json.workspace = true
serde = { workspace = true, features = ["derive"] }
aspartial = {path=".", features=["serde", "iso8601"]}
