[package]
name = "aspartial"
description = "Typescript-like 'partial' types"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
keywords = ["partial", "codegen"]

[features]
iso8601 = ["dep:iso8601-timestamp"]

[dependencies]
aspartial_derive = { path = "../aspartial_derive", version = "0.0.4" }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
iso8601-timestamp = { version = "0.2.17", optional = true }

[dev-dependencies]
serde_json.workspace = true
serde = { workspace = true, features = ["derive"] }
aspartial = {path=".", features=["iso8601"]}

[build-dependencies]
toml = "0.9.2"
